[Story-3] feat: complete the saveHouse method in back end, House information can be saved in db and send to remote client

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,3 +20,9 @@ spring:
     cloud-platform: kubernetes
   lifecycle:
     timeout-per-shutdown-phase: 5s
+
+application:
+  services:
+    house-management:
+      name: HouseManagementServiceClient
+      url: localhost:8089
